force-app/main/default/objects/Adoption__c/validationRules/Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Validation</fullName>
    <active>true</active>
    <description>Amount has to be greater or equal 10</description>
    <errorConditionFormula>Amount__c &lt; 10</errorConditionFormula>
    <errorMessage>Amount has to be greater or equal 10</errorMessage>
</ValidationRule>